--- a/viterbi.ipynb
+++ b/viterbi.ipynb
@@ -109,73 +109,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = np.zeros((2, 2, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[0.3 0.2]\n",
-      "  [0.1 0.4]]\n",
-      "\n",
-      " [[0.1 0.5]\n",
-      "  [0.2 0.2]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "f[0] = np.array([[0.3, 0.2], [0.1, 0.4]])\n",
-    "f[1] = np.array([[0.1, 0.5], [0, 0.2]])\n",
-    "print(f)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Viterbi(f):\n",
-    "    n_nodes = 3\n",
-    "    n_states = 2\n",
-    "\n",
-    "    pmax = np.zeros((n_nodes - 1, n_states))\n",
-    "    phi = np.zeros((n_nodes - 1, n_states))\n",
-    "\n",
-    "    pmax[0] = np.max((f[0]), axis=0)\n",
-    "    phi[0] = np.argmax(f[0], axis=0)\n",
-    "\n",
-    "    for i in range(1, n_nodes - 1):\n",
-    "        tmp = ((f[i]).T + pmax[i - 1]).T\n",
-    "\n",
-    "        pmax[i] = np.max(tmp, axis=0)\n",
-    "\n",
-    "        phi[i] = np.argmax(tmp, axis=0)\n",
-    "\n",
-    "    return pmax, phi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pmax, phi = Viterbi(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 136,
    "metadata": {},
    "outputs": [],
@@ -214,6 +147,171 @@
    ],
    "source": [
     "reconstruct(pmax, phi)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiement with matrix like the one we have (last row of spaces has 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_f(A, B, observed):\n",
+    "    \"\"\"\n",
+    "    Aggiustato il compute_f che dava problemi, ho cambiato observed in i+1 invece che i\n",
+    "    poi questa è l'implementazione senza il log\n",
+    "\n",
+    "    Ho anche aggiustato che in realtà il primo messaggio h -> z_1 NON è 0! (guarda formule)\n",
+    "    \"\"\"\n",
+    "    n_nodes = len(observed)\n",
+    "    n_states = A.shape[0]\n",
+    "    f = np.zeros((n_nodes, n_states, n_states))\n",
+    "\n",
+    "\n",
+    "    for i in range(n_nodes):\n",
+    "        tmp = np.zeros((n_states, n_states))\n",
+    "        for j in range(n_states):\n",
+    "            for k in range(n_states):\n",
+    "                tmp[j, k] = (A[j, k]) * B[k, observed[i]]\n",
+    "        f[i] = tmp\n",
+    "\n",
+    "    return f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Viterbi(f):\n",
+    "    n_nodes = 3\n",
+    "    n_states = 2\n",
+    "\n",
+    "    pmax = np.zeros((n_nodes - 1, n_states))\n",
+    "    phi = np.zeros((n_nodes - 1, n_states))\n",
+    "\n",
+    "    pmax[0] = np.max((f[0]), axis=0)\n",
+    "    phi[0] = np.argmax(f[0], axis=0)\n",
+    "\n",
+    "    for i in range(1, n_nodes - 1):\n",
+    "        tmp = ((f[i]).T + pmax[i - 1]).T\n",
+    "\n",
+    "        pmax[i] = np.max(tmp, axis=0)\n",
+    "\n",
+    "        phi[i] = np.argmax(tmp, axis=0)\n",
+    "\n",
+    "    return pmax, phi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[0.1, 0.8, 0.1],\n",
+    "              [0.8, 0.1, 0.1],\n",
+    "              [0.5, 0.5, 0]])\n",
+    "\n",
+    "B = np.array([[0.5, 0.5, 0],\n",
+    "              [0.5, 0.5, 0],\n",
+    "              [0, 0, 1]])\n",
+    "\n",
+    "observed = np.array([2, 0, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.   0.   0.1 ]\n",
+      "  [0.   0.   0.1 ]\n",
+      "  [0.   0.   0.  ]]\n",
+      "\n",
+      " [[0.05 0.4  0.  ]\n",
+      "  [0.4  0.05 0.  ]\n",
+      "  [0.25 0.25 0.  ]]\n",
+      "\n",
+      " [[0.05 0.4  0.  ]\n",
+      "  [0.4  0.05 0.  ]\n",
+      "  [0.25 0.25 0.  ]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = compute_f(A, B, observed)\n",
+    "print(f)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Errore in compute_f, parte dalla prima osservazione e invece dovrebbe partire dalla seconda (la prima non contribuisce ai messaggi se non )\n",
+    "- Controlla come viene considerato lo spazio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.120263536200091"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(0.3) + np.log(0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.log(0.3) + np.log(0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5.521460917862246"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2*np.log(0.1) + np.log(0.4)"
    ]
   }
  ],
