--- a/viterbi.ipynb
+++ b/viterbi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "        [-0.32850407, -2.99573227]]])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,30 +86,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[-0.32850407, -1.04982212],\n",
-       "        [-1.37832619, -1.37832619]]),\n",
-       " array([[1., 0.],\n",
-       "        [1., 0.]]))"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Viterbi(A, B, observed)"
+    "pmax, phi = Viterbi(A, B, observed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pmax:\n",
+      " [[-0.32850407 -1.04982212]\n",
+      " [-1.37832619 -1.37832619]] \n",
+      "phi\n",
+      " [[1. 0.]\n",
+      " [1. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"pmax:\\n\", pmax, \"\\nphi\\n\", phi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first = np.argmax(pmax[-1])\n",
+    "a = int(phi[-1, first])\n",
+    "b = int(phi[-2, a])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(first, a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,30 +153,30 @@
     "    \"\"\"\n",
     "    Ricostruisce tutti i most probable, per ora fa schifo ma sembra funzionare, da ricontrollare\n",
     "    \"\"\"\n",
+    "    reconstruction = np.empty(len(phi)+1)\n",
     "\n",
-    "    reconstruction = np.empty(len(pmax)+1)\n",
-    "    reconstruction[-1] = np.argmax(pmax[-1])\n",
     "    curr = np.argmax(pmax[-1])\n",
-    "    for i in range(1, len(pmax)-1):\n",
-    "        reconstruction[-1-i] = phi[-1-i][curr]\n",
-    "        curr = phi[i][curr]\n",
+    "    reconstruction[-1] = curr\n",
+    "\n",
+    "    for i in range(len(phi)-1, -1, -1):\n",
+    "        curr = int(phi[i, curr])\n",
+    "        reconstruction[i] = curr\n",
     "    \n",
-    "    return reconstruction\n",
-    "\n"
+    "    return reconstruction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 1.])"
+       "array([0., 1., 0.])"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
