viterbi wo log works, now need to check implementation

--- a/viterbi.ipynb
+++ b/viterbi.ipynb
@@ -195,61 +195,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[0.1, 0.8, 0.1],\n",
+    "              [0.8, 0.1, 0.1],\n",
+    "              [0.5, 0.5, 0]])\n",
+    "\n",
+    "B = np.array([[0.8, 0.2, 0],\n",
+    "              [0.2, 0.8, 0],\n",
+    "              [0, 0, 1]])\n",
+    "\n",
+    "observed = np.array([0, 2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_f(A, B, observed):\n",
     "    \"\"\"\n",
-    "    Aggiustato il compute_f che dava problemi, ho cambiato observed in i+1 invece che i\n",
-    "    poi questa è l'implementazione senza il log\n",
-    "\n",
-    "    Ho anche aggiustato che in realtà il primo messaggio h -> z_1 NON è 0! (guarda formule)\n",
+    "    Careful when handling\n",
+    "    - f0 is the first message (from first factor to node, it is just a vector) \n",
+    "    - f contains all other factors evaluated\n",
     "    \"\"\"\n",
+    "    pi = A[-1]\n",
     "    n_nodes = len(observed)\n",
     "    n_states = A.shape[0]\n",
-    "    f = np.zeros((n_nodes, n_states, n_states))\n",
+    "    f = np.zeros((n_nodes-1, n_states, n_states))\n",
+    "    \n",
+    "    tmp = np.zeros((n_states, 1))\n",
+    "    for k in range(n_states):\n",
+    "        tmp[k] = pi[k] * B[k, observed[0]]\n",
+    "    \n",
+    "    f0 = tmp\n",
     "\n",
-    "\n",
-    "    for i in range(n_nodes):\n",
+    "    for i in range(1, n_nodes):\n",
     "        tmp = np.zeros((n_states, n_states))\n",
-    "        for j in range(n_states):\n",
-    "            for k in range(n_states):\n",
-    "                tmp[j, k] = (A[j, k]) * B[k, observed[i]]\n",
-    "        f[i] = tmp\n",
+    "        \n",
+    "        for j in range(n_states): # over z1\n",
+    "            \n",
+    "            for k in range(n_states): # over z2\n",
+    "                tmp[j, k] = A[j, k] * B[k, observed[i]]\n",
+    "        \n",
+    "        f[i-1] = tmp\n",
+    "    \n",
     "\n",
-    "    return f"
+    "    return f0, f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f0:\n",
+      " [[0.4]\n",
+      " [0.1]\n",
+      " [0. ]] \n",
+      "f:\n",
+      " [[[0.   0.   0.1 ]\n",
+      "  [0.   0.   0.1 ]\n",
+      "  [0.   0.   0.  ]]\n",
+      "\n",
+      " [[0.02 0.64 0.  ]\n",
+      "  [0.16 0.08 0.  ]\n",
+      "  [0.1  0.4  0.  ]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f0, f = compute_f(A, B, observed)\n",
+    "print(\"f0:\\n\", f0, \"\\nf:\\n\", f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Viterbi(f):\n",
-    "    n_nodes = 3\n",
-    "    n_states = 2\n",
+    "def Viterbi(f0, f):\n",
+    "    n_nodes = f.shape[0] + 1\n",
+    "    n_states = f.shape[1]\n",
     "\n",
-    "    pmax = np.zeros((n_nodes - 1, n_states))\n",
-    "    phi = np.zeros((n_nodes - 1, n_states))\n",
+    "    pmax = np.zeros((n_nodes, n_states))    # Need one for every node\n",
+    "    phi = np.zeros((n_nodes - 1, n_states)) # Need one for every node other than the first one (no need to reconstruct it)\n",
     "\n",
-    "    pmax[0] = np.max((f[0]), axis=0)\n",
-    "    phi[0] = np.argmax(f[0], axis=0)\n",
+    "    pmax[0] = f0.flatten()\n",
     "\n",
-    "    for i in range(1, n_nodes - 1):\n",
-    "        tmp = ((f[i]).T + pmax[i - 1]).T\n",
+    "    for i in range(1, n_nodes):\n",
+    "        print(i)\n",
+    "        tmp = ((f[i-1]).T * pmax[i - 1]).T\n",
     "\n",
-    "        pmax[i] = np.max(tmp, axis=0)\n",
+    "        pmax[i] = np.max(tmp, axis=0) # by column\n",
     "\n",
-    "        phi[i] = np.argmax(tmp, axis=0)\n",
+    "        phi[i-1] = np.argmax(tmp, axis=0) # i-1 cause this contains the reconstruction about the (i-1)th element\n",
     "\n",
     "    return pmax, phi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0.4  , 0.1  , 0.   ],\n",
+       "        [0.   , 0.   , 0.04 ],\n",
+       "        [0.004, 0.016, 0.   ]]),\n",
+       " array([[0., 0., 0.],\n",
+       "        [2., 2., 0.]]))"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Viterbi(f0, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_f_log(A, B, observed):\n",
+    "    \"\"\"\n",
+    "    Careful when handling\n",
+    "    - f0 is the first message (from first factor to node, it is just a vector) \n",
+    "    - f contains all other factors evaluated\n",
+    "    \"\"\"\n",
+    "    pi = A[-1]\n",
+    "    n_nodes = len(observed)\n",
+    "    n_states = A.shape[0]\n",
+    "    f = np.zeros((n_nodes-1, n_states, n_states))\n",
+    "    \n",
+    "    tmp = np.zeros((n_states, 1))\n",
+    "    for k in range(n_states):\n",
+    "        tmp[k] = np.log(pi[k]) + np.log(B[k, observed[0]])\n",
+    "    \n",
+    "    f0 = tmp\n",
+    "\n",
+    "    for i in range(1, n_nodes):\n",
+    "        tmp = np.zeros((n_states, n_states))\n",
+    "        \n",
+    "        for j in range(n_states): # over z1\n",
+    "            \n",
+    "            for k in range(n_states): # over z2\n",
+    "                tmp[j, k] = np.log(A[j, k]) + np.log(B[k, observed[i]])\n",
+    "        \n",
+    "        f[i-1] = tmp\n",
+    "    \n",
+    "\n",
+    "    return f0, f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,25 +385,25 @@
     "              [0.5, 0.5, 0],\n",
     "              [0, 0, 1]])\n",
     "\n",
-    "observed = np.array([2, 0, 1])"
+    "observed = np.array([0, 2, 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.   0.   0.1 ]\n",
-      "  [0.   0.   0.1 ]\n",
-      "  [0.   0.   0.  ]]\n",
-      "\n",
-      " [[0.05 0.4  0.  ]\n",
+      "[[[0.05 0.4  0.  ]\n",
       "  [0.4  0.05 0.  ]\n",
       "  [0.25 0.25 0.  ]]\n",
+      "\n",
+      " [[0.   0.   0.1 ]\n",
+      "  [0.   0.   0.1 ]\n",
+      "  [0.   0.   0.  ]]\n",
       "\n",
       " [[0.05 0.4  0.  ]\n",
       "  [0.4  0.05 0.  ]\n",
