Viterbi without log works now

--- a/viterbi.ipynb
+++ b/viterbi.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,6 @@
     "    pmax[0] = f0.flatten()\n",
     "\n",
     "    for i in range(1, n_nodes):\n",
-    "        print(i)\n",
     "        tmp = ((f[i-1]).T * pmax[i - 1]).T\n",
     "\n",
     "        pmax[i] = np.max(tmp, axis=0) # by column\n",
@@ -304,34 +303,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n"
+      "pmax:\n",
+      " [[0.4   0.1   0.   ]\n",
+      " [0.    0.    0.04 ]\n",
+      " [0.004 0.016 0.   ]] \n",
+      "phi:\n",
+      " [[0. 0. 0.]\n",
+      " [2. 2. 0.]]\n",
+      "\n",
+      "Reconstruction using Viterbi:\n",
+      " [0. 2. 1.]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([[0.4  , 0.1  , 0.   ],\n",
-       "        [0.   , 0.   , 0.04 ],\n",
-       "        [0.004, 0.016, 0.   ]]),\n",
-       " array([[0., 0., 0.],\n",
-       "        [2., 2., 0.]]))"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Viterbi(f0, f)"
+    "pmax, phi = Viterbi(f0, f)\n",
+    "print(\"pmax:\\n\", pmax, \"\\nphi:\\n\", phi)\n",
+    "\n",
+    "print(\"\\nReconstruction using Viterbi:\\n\", reconstruct(pmax, phi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pmax:\n",
+      " [[4.00000000e-01 1.00000000e-01 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 4.00000000e-02]\n",
+      " [4.00000000e-03 1.60000000e-02 0.00000000e+00]\n",
+      " [1.02400000e-02 6.40000000e-04 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 1.02400000e-03]\n",
+      " [4.09600000e-04 1.02400000e-04 0.00000000e+00]\n",
+      " [1.63840000e-05 2.62144000e-04 0.00000000e+00]\n",
+      " [1.67772160e-04 5.24288000e-06 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 1.67772160e-05]\n",
+      " [1.67772160e-06 6.71088640e-06 0.00000000e+00]\n",
+      " [4.29496730e-06 2.68435456e-07 0.00000000e+00]\n",
+      " [8.58993459e-08 2.74877907e-06 0.00000000e+00]\n",
+      " [1.75921860e-06 5.49755814e-08 0.00000000e+00]\n",
+      " [3.51843721e-08 1.12589991e-06 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 1.12589991e-07]] \n",
+      "phi:\n",
+      " [[0. 0. 0.]\n",
+      " [2. 2. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [2. 2. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 1. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [2. 2. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [1. 1. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "\n",
+      "Reconstruction using Viterbi:\n",
+      " [0. 2. 1. 0. 2. 0. 1. 0. 2. 1. 0. 1. 0. 1. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "observed = np.array([0, 2, 1, 0, 2, 0, 1, 0, 2, 1, 0, 1, 0]) # a _ b a\n",
+    "f0, f = compute_f(A, B, observed)\n",
+    "pmax, phi = Viterbi(f0, f)\n",
+    "print(\"pmax:\\n\", pmax, \"\\nphi:\\n\", phi)\n",
+    "\n",
+    "print(\"\\nReconstruction using Viterbi:\\n\", reconstruct(pmax, phi))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Log computations\n",
+    "Now we need to find a way for this to hold even when there are "
    ]
   },
   {
