Viterbi --need to try on text

--- a/viterbi.ipynb
+++ b/viterbi.ipynb
@@ -391,20 +391,36 @@
    "metadata": {},
    "source": [
     "# Log computations\n",
-    "Now we need to find a way for this to hold even when there are "
+    "Now we need to find a way for this to hold even when working with logs.\n",
+    "I suspect that replacing with the minimum to account for the 0 is too big, we need something smaller."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[0.1, 0.8, 0.1],\n",
+    "              [0.8, 0.1, 0.1],\n",
+    "              [0.5, 0.5, 0]])\n",
+    "\n",
+    "B = np.array([[0.8, 0.2, 0],\n",
+    "              [0.2, 0.8, 0],\n",
+    "              [0, 0, 1]])\n",
+    "\n",
+    "observed = np.array([0, 2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_f_log(A, B, observed):\n",
     "    \"\"\"\n",
-    "    Careful when handling\n",
-    "    - f0 is the first message (from first factor to node, it is just a vector) \n",
-    "    - f contains all other factors evaluated\n",
+    "    Even though it contains the -inf, this is fine, as that means we should not reconstruct using those (?)\n",
     "    \"\"\"\n",
     "    pi = A[-1]\n",
     "    n_nodes = len(observed)\n",
@@ -424,7 +440,7 @@
     "            \n",
     "            for k in range(n_states): # over z2\n",
     "                tmp[j, k] = np.log(A[j, k]) + np.log(B[k, observed[i]])\n",
-    "        \n",
+    "    \n",
     "        f[i-1] = tmp\n",
     "    \n",
     "\n",
@@ -433,47 +449,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.array([[0.1, 0.8, 0.1],\n",
-    "              [0.8, 0.1, 0.1],\n",
-    "              [0.5, 0.5, 0]])\n",
+    "def Viterbi_log(f0, f):\n",
+    "    n_nodes = f.shape[0] + 1\n",
+    "    n_states = f.shape[1]\n",
     "\n",
-    "B = np.array([[0.5, 0.5, 0],\n",
-    "              [0.5, 0.5, 0],\n",
-    "              [0, 0, 1]])\n",
+    "    pmax = np.zeros((n_nodes, n_states))    # Need one for every node\n",
+    "    phi = np.zeros((n_nodes - 1, n_states)) # Need one for every node other than the first one (no need to reconstruct it)\n",
     "\n",
-    "observed = np.array([0, 2, 1])"
+    "    pmax[0] = f0.flatten()\n",
+    "\n",
+    "    for i in range(1, n_nodes):\n",
+    "        tmp = ((f[i-1]).T + pmax[i - 1]).T\n",
+    "\n",
+    "        pmax[i] = np.max(tmp, axis=0) # by column\n",
+    "\n",
+    "        phi[i-1] = np.argmax(tmp, axis=0) # i-1 cause this contains the reconstruction about the (i-1)th element\n",
+    "\n",
+    "    return pmax, phi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.05 0.4  0.  ]\n",
-      "  [0.4  0.05 0.  ]\n",
-      "  [0.25 0.25 0.  ]]\n",
+      "f0:\n",
+      " [[-0.91629073]\n",
+      " [-2.30258509]\n",
+      " [       -inf]] \n",
+      "f:\n",
+      " [[[       -inf        -inf -2.30258509]\n",
+      "  [       -inf        -inf -2.30258509]\n",
+      "  [       -inf        -inf        -inf]]\n",
       "\n",
-      " [[0.   0.   0.1 ]\n",
-      "  [0.   0.   0.1 ]\n",
-      "  [0.   0.   0.  ]]\n",
+      " [[-3.91202301 -0.4462871         -inf]\n",
+      "  [-1.83258146 -2.52572864        -inf]\n",
+      "  [-2.30258509 -0.91629073        -inf]]]\n",
       "\n",
-      " [[0.05 0.4  0.  ]\n",
-      "  [0.4  0.05 0.  ]\n",
-      "  [0.25 0.25 0.  ]]]\n"
+      "\n",
+      "pmax:\n",
+      " [[-0.91629073 -2.30258509        -inf]\n",
+      " [       -inf        -inf -3.21887582]\n",
+      " [-5.52146092 -4.13516656        -inf]] \n",
+      "phi:\n",
+      " [[0. 0. 0.]\n",
+      " [2. 2. 0.]]\n",
+      "\n",
+      "\n",
+      " reconstruction: [0. 2. 1.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_27125/3658002382.py:12: RuntimeWarning: divide by zero encountered in log\n",
+      "  tmp[k] = np.log(pi[k]) + np.log(B[k, observed[0]])\n",
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_27125/3658002382.py:22: RuntimeWarning: divide by zero encountered in log\n",
+      "  tmp[j, k] = np.log(A[j, k]) + np.log(B[k, observed[i]])\n"
      ]
     }
    ],
    "source": [
-    "f = compute_f(A, B, observed)\n",
-    "print(f)"
+    "f0, f = compute_f_log(A, B, observed)\n",
+    "print(\"f0:\\n\", f0, \"\\nf:\\n\", f)\n",
+    "\n",
+    "\n",
+    "pmax, phi = Viterbi_log(f0, f)\n",
+    "print(\"\\n\\npmax:\\n\", pmax, \"\\nphi:\\n\", phi)\n",
+    "\n",
+    "print(\"\\n\\n reconstruction:\", reconstruct(pmax, phi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f0:\n",
+      " [[-0.91629073]\n",
+      " [-2.30258509]\n",
+      " [       -inf]] \n",
+      "f:\n",
+      " [[[       -inf        -inf -2.30258509]\n",
+      "  [       -inf        -inf -2.30258509]\n",
+      "  [       -inf        -inf        -inf]]\n",
+      "\n",
+      " [[-3.91202301 -0.4462871         -inf]\n",
+      "  [-1.83258146 -2.52572864        -inf]\n",
+      "  [-2.30258509 -0.91629073        -inf]]\n",
+      "\n",
+      " [[       -inf        -inf -2.30258509]\n",
+      "  [       -inf        -inf -2.30258509]\n",
+      "  [       -inf        -inf        -inf]]\n",
+      "\n",
+      " [[-3.91202301 -0.4462871         -inf]\n",
+      "  [-1.83258146 -2.52572864        -inf]\n",
+      "  [-2.30258509 -0.91629073        -inf]]\n",
+      "\n",
+      " [[-2.52572864 -1.83258146        -inf]\n",
+      "  [-0.4462871  -3.91202301        -inf]\n",
+      "  [-0.91629073 -2.30258509        -inf]]\n",
+      "\n",
+      " [[-3.91202301 -0.4462871         -inf]\n",
+      "  [-1.83258146 -2.52572864        -inf]\n",
+      "  [-2.30258509 -0.91629073        -inf]]]\n",
+      "\n",
+      "\n",
+      "pmax:\n",
+      " [[ -0.91629073  -2.30258509         -inf]\n",
+      " [        -inf         -inf  -3.21887582]\n",
+      " [ -5.52146092  -4.13516656         -inf]\n",
+      " [        -inf         -inf  -6.43775165]\n",
+      " [ -8.74033674  -7.35404238         -inf]\n",
+      " [ -7.80032948 -10.57291821         -inf]\n",
+      " [-11.71235249  -8.24661659         -inf]] \n",
+      "phi:\n",
+      " [[0. 0. 0.]\n",
+      " [2. 2. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [2. 2. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "\n",
+      "\n",
+      " reconstruction: [0. 2. 1. 2. 1. 0. 1.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_27125/3658002382.py:12: RuntimeWarning: divide by zero encountered in log\n",
+      "  tmp[k] = np.log(pi[k]) + np.log(B[k, observed[0]])\n",
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_27125/3658002382.py:22: RuntimeWarning: divide by zero encountered in log\n",
+      "  tmp[j, k] = np.log(A[j, k]) + np.log(B[k, observed[i]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "observed = np.array([0, 2, 1, 2, 1, 0, 1]) # a = 0; b = 1; _ = 2\n",
+    "f0, f = compute_f_log(A, B, observed)\n",
+    "print(\"f0:\\n\", f0, \"\\nf:\\n\", f)\n",
+    "\n",
+    "\n",
+    "pmax, phi = Viterbi_log(f0, f)\n",
+    "print(\"\\n\\npmax:\\n\", pmax, \"\\nphi:\\n\", phi)\n",
+    "\n",
+    "print(\"\\n\\n reconstruction:\", reconstruct(pmax, phi))"
    ]
   },
   {
@@ -481,28 +616,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Errore in compute_f, parte dalla prima osservazione e invece dovrebbe partire dalla seconda (la prima non contribuisce ai messaggi se non )\n",
-    "- Controlla come viene considerato lo spazio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-2.120263536200091"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.log(0.3) + np.log(0.4)"
+    "### Try using our words example\n",
+    "Now using the matrix and our phrase we try and see if it works"
    ]
   },
   {
@@ -510,29 +625,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "np.log(0.3) + np.log(0.4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-5.521460917862246"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2*np.log(0.1) + np.log(0.4)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
